--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -21,6 +21,7 @@ img {
   max-width: 100%;
   height: auto;
 }
+
 $lightBlue: #60A3D9;
 $brandColor: #0074B7;
 $NavyBlue: #003B73;
@@ -86,12 +87,14 @@ a {
         font-family: "Roboto Slab", serif;
         font-weight: 500;
         transition: 0.5s;
-        &:hover{
+
+        &:hover {
           color: $brandColor;
         }
       }
-      &.active{
-        a{
+
+      &.active {
+        a {
           color: $brandColor;
         }
       }
@@ -217,6 +220,14 @@ ul.skill-list {
     background-color: #ffffff;
     margin-bottom: 4px;
     border-radius: 4px;
+    transition: 0.4s;
+
+    &:hover {
+      transform: translateY(-5px);
+      cursor: pointer;
+      //background-color: $brandColor;
+      //color: #ffffff;
+    }
   }
 }
 
@@ -245,6 +256,11 @@ ul.education-list {
     padding: 5px;
     background-color: #ffffff;
     border: 1px solid #ebebeb;
+    transition: 0.4s;
+
+    &:hover {
+      transform: translateY(-5px);
+    }
   }
 }
 
@@ -257,6 +273,11 @@ ul.education-list {
     background-color: #ffffff;
     border: 1px solid #ebebeb;
     margin-bottom: 30px;
+    transition: 0.4s;
+
+    &:hover {
+      transform: translateY(-5px);
+    }
   }
 
   .blog-info {
@@ -264,5 +285,32 @@ ul.education-list {
       margin-top: 30px;
       margin-bottom: 10px;
     }
+  }
+}
+
+.experience-card {
+  margin-bottom: 20px;
+  transition: 0.4s;
+
+  img {
+    max-height: 40px;
+    margin-bottom: 10px;
+  }
+
+  h4 {
+    margin-bottom: 10px;
+
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+  }
+
+  p {
+    margin-bottom: 5px;
+  }
+
+  &:hover {
+    transform: translateY(-5px);
   }
 }
