--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -57,8 +57,8 @@ a {
   display: flex;
   align-items: center;
   height: 100vh;
-  width: 24%;
-  max-width: 450px;
+  //width: 24%;
+  width: 450px;
 
   .sidebar-inner {
     width: 100%;
@@ -312,5 +312,108 @@ ul.education-list {
 
   &:hover {
     transform: translateY(-5px);
+  }
+}
+
+.mobile-menu-trigger {
+  text-align: right;
+  display: none;
+
+  button {
+    width: 45px;
+    height: 30px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background-color: transparent;
+
+    span {
+      display: block;
+      width: 100%;
+      height: 4px;
+      background-color: #0a53be;
+      border-radius: 4px;
+      position: relative;
+
+      &:before, &:after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 4px;
+        background-color: #0a53be;
+        border-radius: 4px;
+        position: absolute;
+        transition: top 0.3s, transform 0.2s;
+      }
+
+      &:before {
+        top: -10px;
+      }
+
+      &:after {
+        top: 10px;
+      }
+    }
+
+    &.mobile-menu-activated {
+      span {
+        background-color: transparent;
+
+        &:before, &:after {
+          top: 0;
+          background-color: $NavyBlue;
+        }
+
+        &:before {
+          transform: rotate(45deg);
+          transition-delay: 0s, 0.3s;
+        }
+
+        &:after {
+          transform: rotate(-45deg);
+          transition-delay: 0s, 0.3s;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .sidebar {
+    width: 300px;
+  }
+  .page-container {
+    padding-left: 300px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .sidebar {
+    width: 100%;
+    height: auto;
+    bottom: auto;
+    z-index: 999;
+  }
+  .page-container {
+    padding-left: 0;
+  }
+  .sidebar-inner {
+    display: grid;
+    grid-template-columns: 50% 50%;
+  }
+  .mobile-menu-trigger {
+    display: block;
+  }
+  .menu-area {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    display: none;
+    border-top: 1px solid #f5f5f5;
+    border-bottom: 1px solid #f5f5f5;
+  }
+  .copyright {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    display: none;
   }
 }
