--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -393,6 +393,8 @@ ul.education-list {
     height: auto;
     bottom: auto;
     z-index: 999;
+    border-right: none;
+    box-shadow: 0px 0px 2px 1px #ccc;
   }
   .page-container {
     padding-left: 0;
@@ -415,5 +417,16 @@ ul.education-list {
     grid-column-start: 1;
     grid-column-end: 3;
     display: none;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  section.page-section {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .sidebar .sidebar-inner > div {
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
