--- a/css/layout.css
+++ b/css/layout.css
@@ -28,6 +28,19 @@ a {
 
 .wrapper {
   padding-top: 200px;
+  width: 100%;
+  height: 100%;
+}
+.wrapper .particles-js-canvas-el {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.wrapper .container {
+  position: relative;
+  z-index: 1;
 }
 
 .sidebar {
