--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -32,6 +32,25 @@ a {
 
 .wrapper {
   padding-top: 200px;
+  width: 100%;
+  height: 100%;
+  //background-color: #b61924;
+  //background-image: url('');
+  //background-size: cover;
+  //background-position: 50% 50%;
+  //background-repeat: no-repeat;
+  .particles-js-canvas-el{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    //z-index: -1;
+  }
+  .container{
+    position: relative;
+    z-index: 1;
+  }
 }
 
 .sidebar {
