--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -262,6 +262,17 @@ a {
   padding-left: 20px;
 }
 
+@keyframes BottomtoTop {
+  from {
+    transform: translateY(500px);
+    opacity: 0.2;
+  }
+  to{
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
 .page-section {
   background-color: #fff;
   padding: 50px;
@@ -272,6 +283,7 @@ a {
 
   &.active-section {
     display: block;
+    animation: BottomtoTop 1s;
   }
 }
 
@@ -389,6 +401,7 @@ ul.education-list {
 
 .service-box {
   margin-bottom: 40px;
+
   h4 {
     margin-bottom: 10px;
     font-size: 1.4rem;
