--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -183,27 +183,27 @@ a {
         }
       }
 
-      &.download-cv {
-        a {
-          display: table;
-          text-align: center;
-          margin: 10px auto;
-          padding: 10px 25px;
-          background: linear-gradient(45deg, #fa5252, #e12973);
-          color: #ffffff;
-          text-decoration: none;
-          border-radius: 4px;
-          font-weight: 500;
 
-          i {
-            margin-right: 8px;
-          }
-        }
-      }
     }
   }
 }
+.download-cv {
+  a {
+    display: table;
+    text-align: center;
+    margin: 10px auto;
+    padding: 10px 25px;
+    background: linear-gradient(45deg, #fa5252, #e12973);
+    color: #ffffff;
+    text-decoration: none;
+    border-radius: 4px;
+    font-weight: 500;
 
+    i {
+      margin-right: 8px;
+    }
+  }
+}
 .main-navigation {
   display: flex;
   justify-content: right;
