update project page

--- a/css/layout.css
+++ b/css/layout.css
@@ -7,6 +7,14 @@ body {
   margin: 0;
   padding: 0;
 }
+body.project-popup-activated {
+  overflow: hidden;
+}
+body.project-popup-activated .project-popup {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 * {
   box-sizing: border-box;
@@ -283,9 +291,34 @@ ul.education-list li {
   background-color: #ffffff;
   border: 1px solid #ebebeb;
   transition: 0.4s;
+  overflow: hidden;
+}
+.portfolio-wrapper .portfolio-item-inner .portfolio-info {
+  text-align: center;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 20px;
+  left: 0;
+  bottom: -100%;
+  right: 0;
+  flex-direction: column;
+  color: #ffffff;
+  transition: 0.4s;
+  font-size: 90%;
+  opacity: 0;
+}
+.portfolio-wrapper .portfolio-item-inner .portfolio-info .portfolio-details {
+  display: none;
 }
 .portfolio-wrapper .portfolio-item-inner:hover {
   transform: translateY(-5px);
+}
+.portfolio-wrapper .portfolio-item-inner:hover .portfolio-info {
+  bottom: 0;
+  opacity: 1;
 }
 
 .blog-wrapper {
@@ -404,6 +437,71 @@ ul.education-list li {
   transition-delay: 0s, 0.3s;
 }
 
+.project-popup {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.57);
+  z-index: 999;
+}
+.project-popup .project-popup-inner {
+  position: relative;
+  width: 90%;
+  max-width: 1100px;
+}
+.project-popup .project-popup-inner .project-popup-inner-scroll {
+  overflow: auto;
+  background-color: #fff;
+  width: 100%;
+  padding: 35px;
+  max-height: 90vh;
+}
+.project-popup .close-project-popup {
+  position: absolute;
+  background-color: #ff0000;
+  width: 40px;
+  height: 40px;
+  right: -14px;
+  top: -14px;
+  border-radius: 50%;
+  cursor: pointer;
+  box-shadow: 0 0 2px #000000;
+  text-align: center;
+  color: #fff;
+  line-height: 40px;
+  font-size: 1.5rem;
+}
+.project-popup .project-popup-content {
+  display: flex;
+  flex-wrap: wrap;
+}
+.project-popup .project-popup-content > div {
+  flex: 0 0 50%;
+  max-width: 50%;
+  padding: 15px;
+}
+.project-popup .project-popup-content .portfolio-summery {
+  display: none;
+}
+.project-popup .project-popup-content .portfolio-details {
+  display: block;
+}
+.project-popup .project-popup-content .portfolio-details h3 {
+  margin-bottom: 20px;
+}
+.project-popup .project-popup-content .portfolio-details h5 {
+  margin: 20px 0 10px;
+}
+.project-popup .project-popup-content .portfolio-details p {
+  margin: 5px 0;
+}
+.project-popup .project-popup-content .portfolio-details .btn {
+  margin-top: 30px;
+}
+
 @media screen and (max-width: 1320px) {
   .page-container {
     width: 98%;
@@ -469,6 +567,19 @@ ul.education-list li {
 
   .sidebar-inner {
     padding-top: 75px !important;
+  }
+
+  .portfolio-wrapper .portfolio-item {
+    width: calc(100% - 15px);
+  }
+
+  .project-popup .project-popup-content {
+    flex-direction: column;
+  }
+  .project-popup .project-popup-content > div {
+    flex: 0 0 100%;
+    max-width: 100%;
+    padding: 15px 0;
   }
 }
 @media screen and (max-width: 454px) {
