--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -6,6 +6,17 @@ body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
+
+  &.project-popup-activated {
+    overflow: hidden;
+
+    .project-popup {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+  }
 }
 
 * {
@@ -187,6 +198,7 @@ a {
     }
   }
 }
+
 .download-cv {
   a {
     display: table;
@@ -204,6 +216,7 @@ a {
     }
   }
 }
+
 .main-navigation {
   display: flex;
   justify-content: right;
@@ -330,7 +343,6 @@ ul.education-list {
   .portfolio-item {
     margin-bottom: 30px;
     width: calc(50% - 15px);
-    //transition: 2s;
   }
 
   .portfolio-item-inner {
@@ -338,9 +350,37 @@ ul.education-list {
     background-color: #ffffff;
     border: 1px solid #ebebeb;
     transition: 0.4s;
+    overflow: hidden;
+
+    .portfolio-info {
+      text-align: center;
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 20px;
+      left: 0;
+      bottom: -100%;
+      right: 0;
+      flex-direction: column;
+      color: #ffffff;
+      transition: 0.4s;
+      font-size: 90%;
+      opacity: 0;
+
+      .portfolio-details {
+        display: none;
+      }
+    }
 
     &:hover {
       transform: translateY(-5px);
+
+      .portfolio-info {
+        bottom: 0;
+        opacity: 1;
+      }
     }
   }
 }
@@ -487,6 +527,84 @@ ul.education-list {
   }
 }
 
+.project-popup {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.57);
+  z-index: 999;
+
+
+  .project-popup-inner {
+    position: relative;
+    width: 90%;
+    max-width: 1100px;
+
+
+    .project-popup-inner-scroll {
+      overflow: auto;
+      background-color: #fff;
+      width: 100%;
+      padding: 35px;
+      max-height: 90vh;
+    }
+  }
+
+  .close-project-popup {
+    position: absolute;
+    background-color: #ff0000;
+    width: 40px;
+    height: 40px;
+    right: -14px;
+    top: -14px;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0 0 2px #000000;
+    text-align: center;
+    color: #fff;
+    line-height: 40px;
+    font-size: 1.5rem;
+  }
+
+  .project-popup-content {
+    display: flex;
+    flex-wrap: wrap;
+
+    & > div {
+      flex: 0 0 50%;
+      max-width: 50%;
+      padding: 15px;
+    }
+
+    .portfolio-summery {
+      display: none;
+    }
+
+    .portfolio-details {
+      display: block;
+
+      h3 {
+        margin-bottom: 20px;
+      }
+
+      h5 {
+        margin: 20px 0 10px;
+      }
+
+      p {
+        margin: 5px 0;
+      }
+
+      .btn {
+        margin-top: 30px;
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 1320px) {
   .page-container {
     width: 98%;
@@ -548,6 +666,22 @@ ul.education-list {
   }
   .sidebar-inner {
     padding-top: 75px !important;
+  }
+  .portfolio-wrapper {
+    .portfolio-item {
+      width: calc(100% - 15px);
+    }
+  }
+  .project-popup {
+    .project-popup-content {
+      flex-direction: column;
+
+      & > div {
+        flex: 0 0 100%;
+        max-width: 100%;
+        padding: 15px 0;
+      }
+    }
   }
 }
 
